# roxane-os

./: README.md  install-roxane-os.sh  pyproject.toml  setup-initial.sh
api/: server.py
config/: system.yaml
core/: __init__.py  engine.py  factory.py  interfaces.py
core/audio/: __init__.py  manager.py
core/cache/: __init__.py  redis_manager.py
core/database/: __init__.py  manager.py  models.py
core/memory/: __init__.py  memory.py
core/modules/: __init__.py  file_manager.py  robust_web_search.py  simple_web_search.py  system_control.py
core/nlp/: context_manager.py  language_model.py  llm_intent_classifier.py  model_manager.py  response_generator.py
core/security/: permission_checker.py
scripts/: create_tables_postgres.py  customize-system.sh  download-models.sh  final-setup.sh  init_database.py  install-docker.sh  install-postgresql.sh  install-python.sh  install-redis.sh  install-roxane-core.sh  install-services.sh  install-system-packages.sh  setup-postgresql.sh  test_context.py  test_integration.py  test_memory.py  test_open_source_providers.py  test_simple_web_search.py  test_web_search.py
